--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.21.1",
     "js-tokens": "^4.0.0",
     "loose-envify": "^1.4.0",
+    "mongoose": "^8.8.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.0.2",
