added middleware asyncHandler and also fixed descriptions missing and added some scripts

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "main": "server.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
     "cookie": "^1.0.2",
     "express": "^4.21.1",
     "js-tokens": "^4.0.0",
@@ -27,7 +29,9 @@
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "data:import": "node backend/seeder.js",
+    "data:destroy": "node backend/seeder.js -d"
   },
   "author": "Peter Woo",
   "license": "MIT"
