--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cookie": "^1.0.2",
+    "cookie-parser": "^1.4.7",
     "express": "^4.21.1",
     "js-tokens": "^4.0.0",
+    "jsonwebtoken": "^9.0.2",
     "loose-envify": "^1.4.0",
     "mongoose": "^8.8.3",
     "react": "^18.3.1",
